[package]
name = "Z3OverworldEditor"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version= "0.13.1", features = ["canvas", "svg", "smol", "image", "advanced"] }
iced_aw = { version = "0.12.0", default-features = false, features = ["number_input", "menu", "quad"] }
iced_fonts = { version = "0.2.1", features = ["bootstrap"] }
dark-light = "2.0.0"
directories = "6.0.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
env_logger = "0.11.8"
rfd = "0.15.3"
json-pretty-compact = "0.1.2"
glob = "0.3.2"
hashbrown = "0.15.3"